--- a/denial-constraint-violations/v1.0.0/run-0.1.ipynb
+++ b/denial-constraint-violations/v1.0.0/run-0.1.ipynb
@@ -61,7 +61,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "denial_constraint_violation = lambda t1, t2: t1['salario'] > t2['salario']"
+    "denial_constraint_violation = lambda t1, t2: t1['salario'] > t2['salario']\n",
+    "\n",
+    "# resultado = dataset[(dataset['salario'] > 1000) & (dataset['departamento'] == 'A')]"
    ]
   },
   {
