--- a/denial-constraint-violations/v1.0.0/run-0.5.ipynb
+++ b/denial-constraint-violations/v1.0.0/run-0.5.ipynb
@@ -10,9 +10,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (1.5.2)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (1.21.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (1.21.3)\n",
       "Requirement already satisfied: six>=1.5 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 23.2.1 is available.\n",
       "You should consider upgrading via the '/home/alessandro/.asdf/installs/python/3.10.5/bin/python3.10 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
@@ -54,7 +54,7 @@
       "0   1  2023  Recursos Humanos    50000   10000\n",
       "1   2  2023            Vendas    60000  350000\n",
       "2   3  2022        Tecnologia    75000  100000\n",
-      "3   4  2023         Marketing    55000   80000\n",
+      "3   4  2024         Marketing    55000   80000\n",
       "4   5  2023        Financeiro    70000   90000\n",
       "5   6  2023         Operações    48000       0\n"
      ]
@@ -156,7 +156,7 @@
       "0   1  2023  Recursos Humanos    50000   10000      False\n",
       "1   2  2023            Vendas    60000  350000      False\n",
       "2   3  2022        Tecnologia    75000  100000       True\n",
-      "3   4  2023         Marketing    55000   80000      False\n",
+      "3   4  2024         Marketing    55000   80000      False\n",
       "4   5  2023        Financeiro    70000   90000      False\n",
       "5   6  2023         Operações    48000       0      False\n"
      ]
@@ -188,10 +188,10 @@
      "text": [
       "   id   ano      departamento  salario   bonus  violation              target\n",
       "0   1  2023  Recursos Humanos    50000   10000      False                  []\n",
-      "1   2  2023            Vendas    60000  350000      False                  []\n",
-      "2   3  2022        Tecnologia    75000  100000       True  [3, 1, 2, 4, 5, 6]\n",
-      "3   4  2023         Marketing    55000   80000      False                  []\n",
-      "4   5  2023        Financeiro    70000   90000      False                  []\n",
+      "1   2  2023            Vendas    60000  350000       True        [2, 4, 5, 6]\n",
+      "2   3  2022        Tecnologia    75000  100000       True  [1, 2, 3, 4, 5, 6]\n",
+      "3   4  2024         Marketing    55000   80000      False                  []\n",
+      "4   5  2023        Financeiro    70000   90000       True           [4, 5, 6]\n",
       "5   6  2023         Operações    48000       0      False                  []\n"
      ]
     }
@@ -206,20 +206,23 @@
     "  for t2_idx in range(t1_idx + 1, tuples_qtd):\n",
     "    t1 = dataset.iloc[t1_idx]\n",
     "    t2 = dataset.iloc[t2_idx]\n",
-    "    dataset.at[t1_idx, 'violation'] = violates_all_constraints(constraints_validations, t1, t2)\n",
-    "    dataset.at[t2_idx, 'violation'] = violates_all_constraints(constraints_validations, t2, t1)\n",
+    "    dataset.at[t1_idx, 'violation'] = dataset.at[t1_idx, 'violation'] or violates_all_constraints(constraints_validations, t1, t2)\n",
+    "    dataset.at[t2_idx, 'violation'] = dataset.at[t2_idx, 'violation'] or violates_all_constraints(constraints_validations, t2, t1)\n",
     "\n",
     "    if dataset.at[t1_idx, 'violation']:\n",
-    "      if cv_metadata['has_equal_table'] and not t1['id'] in dataset.at[t1_idx, 'target']:\n",
+    "      if cv_metadata['has_equal_table']:\n",
     "        dataset.at[t1_idx, 'target'].append(t1['id'])\n",
-    "      if cv_metadata['has_diff_table'] and not t2['id'] in dataset.at[t1_idx, 'target']:\n",
+    "      if cv_metadata['has_diff_table']:\n",
     "        dataset.at[t1_idx, 'target'].append(t2['id'])\n",
     "\n",
     "    if dataset.at[t2_idx, 'violation']:\n",
-    "      if cv_metadata['has_equal_table'] and not t2['id'] in dataset.at[t2_idx, 'target']:\n",
+    "      if cv_metadata['has_equal_table']:\n",
     "        dataset.at[t2_idx, 'target'].append(t2['id'])\n",
-    "      if cv_metadata['has_diff_table'] and not t1['id'] in dataset.at[t2_idx, 'target']:\n",
+    "      if cv_metadata['has_diff_table']:\n",
     "        dataset.at[t2_idx, 'target'].append(t1['id'])\n",
+    "\n",
+    "for i in range(tuples_qtd):\n",
+    "  dataset.at[i, 'target'] = list(set(dataset.at[i, 'target']))\n",
     "\n",
     "print(dataset)"
    ]
