--- a/denial-constraint-violations/v1.0.0/run-0.5.ipynb
+++ b/denial-constraint-violations/v1.0.0/run-0.5.ipynb
@@ -10,8 +10,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (1.5.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2023.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2023.3)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (1.21.3)\n",
       "Requirement already satisfied: six>=1.5 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 23.2.1 is available.\n",
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['t1.salario > t2.salario', 't1.ano < t2.ano', 't1.salario < t1.bonus']\n",
+      "['t1.salario > t2.salario', 't1.ano < t2.ano']\n",
       "\n",
       "   id   ano      departamento  salario   bonus\n",
       "0   1  2023  Recursos Humanos    50000   10000\n",
@@ -186,13 +186,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   id   ano      departamento  salario   bonus  violation              target\n",
-      "0   1  2023  Recursos Humanos    50000   10000      False                  []\n",
-      "1   2  2023            Vendas    60000  350000       True        [2, 4, 5, 6]\n",
-      "2   3  2022        Tecnologia    75000  100000       True  [1, 2, 3, 4, 5, 6]\n",
-      "3   4  2024         Marketing    55000   80000      False                  []\n",
-      "4   5  2023        Financeiro    70000   90000       True           [4, 5, 6]\n",
-      "5   6  2023         Operações    48000       0      False                  []\n"
+      "   id   ano      departamento  salario   bonus  violation           target\n",
+      "0   1  2023  Recursos Humanos    50000   10000      False               []\n",
+      "1   2  2023            Vendas    60000  350000       True              [4]\n",
+      "2   3  2022        Tecnologia    75000  100000       True  [1, 2, 4, 5, 6]\n",
+      "3   4  2024         Marketing    55000   80000      False               []\n",
+      "4   5  2023        Financeiro    70000   90000       True              [4]\n",
+      "5   6  2023         Operações    48000       0      False               []\n"
      ]
     }
    ],
@@ -206,16 +206,18 @@
     "  for t2_idx in range(t1_idx + 1, tuples_qtd):\n",
     "    t1 = dataset.iloc[t1_idx]\n",
     "    t2 = dataset.iloc[t2_idx]\n",
-    "    dataset.at[t1_idx, 'violation'] = dataset.at[t1_idx, 'violation'] or violates_all_constraints(constraints_validations, t1, t2)\n",
-    "    dataset.at[t2_idx, 'violation'] = dataset.at[t2_idx, 'violation'] or violates_all_constraints(constraints_validations, t2, t1)\n",
+    "    t1_has_violation = violates_all_constraints(constraints_validations, t1, t2)\n",
+    "    t2_has_violation = violates_all_constraints(constraints_validations, t2, t1)\n",
     "\n",
-    "    if dataset.at[t1_idx, 'violation']:\n",
+    "    if t1_has_violation:\n",
+    "      dataset.at[t1_idx, 'violation'] = True\n",
     "      if cv_metadata['has_equal_table']:\n",
     "        dataset.at[t1_idx, 'target'].append(t1['id'])\n",
     "      if cv_metadata['has_diff_table']:\n",
     "        dataset.at[t1_idx, 'target'].append(t2['id'])\n",
     "\n",
-    "    if dataset.at[t2_idx, 'violation']:\n",
+    "    if t2_has_violation:\n",
+    "      dataset.at[t2_idx, 'violation'] = True\n",
     "      if cv_metadata['has_equal_table']:\n",
     "        dataset.at[t2_idx, 'target'].append(t2['id'])\n",
     "      if cv_metadata['has_diff_table']:\n",
