--- a/denial-constraint-violations/v1.0.0/run-0.5.ipynb
+++ b/denial-constraint-violations/v1.0.0/run-0.5.ipynb
@@ -10,8 +10,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (1.5.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (1.21.3)\n",
       "Requirement already satisfied: six>=1.5 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 23.2.1 is available.\n",
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['t1.salario > t2.salario', 't1.ano < t2.ano']\n",
+      "['t1.salario > t1.bonus']\n",
       "\n",
       "   id   ano      departamento  salario   bonus\n",
       "0   1  2023  Recursos Humanos    50000   10000\n",
@@ -153,12 +153,12 @@
      "output_type": "stream",
      "text": [
       "   id   ano      departamento  salario   bonus  violation\n",
-      "0   1  2023  Recursos Humanos    50000   10000      False\n",
+      "0   1  2023  Recursos Humanos    50000   10000       True\n",
       "1   2  2023            Vendas    60000  350000      False\n",
-      "2   3  2022        Tecnologia    75000  100000       True\n",
+      "2   3  2022        Tecnologia    75000  100000      False\n",
       "3   4  2024         Marketing    55000   80000      False\n",
       "4   5  2023        Financeiro    70000   90000      False\n",
-      "5   6  2023         Operações    48000       0      False\n"
+      "5   6  2023         Operações    48000       0       True\n"
      ]
     }
    ],
@@ -186,20 +186,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   id   ano      departamento  salario   bonus  violation           target\n",
-      "0   1  2023  Recursos Humanos    50000   10000      False               []\n",
-      "1   2  2023            Vendas    60000  350000       True              [4]\n",
-      "2   3  2022        Tecnologia    75000  100000       True  [1, 2, 4, 5, 6]\n",
-      "3   4  2024         Marketing    55000   80000      False               []\n",
-      "4   5  2023        Financeiro    70000   90000       True              [4]\n",
-      "5   6  2023         Operações    48000       0      False               []\n"
+      "   id   ano      departamento  salario   bonus  violation target\n",
+      "0   1  2023  Recursos Humanos    50000   10000       True    [1]\n",
+      "1   2  2023            Vendas    60000  350000      False     []\n",
+      "2   3  2022        Tecnologia    75000  100000      False     []\n",
+      "3   4  2024         Marketing    55000   80000      False     []\n",
+      "4   5  2023        Financeiro    70000   90000      False     []\n",
+      "5   6  2023         Operações    48000       0       True    [6]\n"
      ]
     }
    ],
    "source": [
     "tuples_qtd = dataset.shape[0]\n",
     "\n",
-    "dataset['violation'] = False\n",
+    "\n",
     "dataset['target'] = [[] for _ in range(tuples_qtd)]\n",
     "\n",
     "for t1_idx in range(tuples_qtd):\n",
