--- a/denial-constraint-violations/v1.0.0/tools.ipynb
+++ b/denial-constraint-violations/v1.0.0/tools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,35 @@
     "        '<': '>',\n",
     "        '>': '<',\n",
     "        '<=': '>=',\n",
-    "        '>=': '<='\n",
+    "        '>=': '<=',\n",
+    "        '!=': '!='\n",
     "    }\n",
     "\n",
-    "    pattern = r'(\\d+)\\s*([<>=]+)\\s*(t2\\.\\w+)'\n",
+    "    pattern = r'(\\d+)\\s*([<>=]+)\\s*(t1\\.\\w+)'\n",
     "    substitution = lambda match: f'{match.group(3)} {operators.get(match.group(2), match.group(2))} {match.group(1)}'\n",
     "\n",
     "    nova_expressao = re.sub(pattern, substitution, expression)\n",
     "    return nova_expressao"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'t1.ano < 2023'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invert_expression(\"2023 > t1.ano\")"
    ]
   }
  ],
