--- a/denial-constraint-violations/v1.0.0/using-pandas-conditions/run-0.2.ipynb
+++ b/denial-constraint-violations/v1.0.0/using-pandas-conditions/run-0.2.ipynb
@@ -21,9 +21,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (1.5.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2023.3)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (1.21.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2023.3)\n",
       "Requirement already satisfied: six>=1.5 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 23.2.1 is available.\n",
       "You should consider upgrading via the '/home/alessandro/.asdf/installs/python/3.10.5/bin/python3.10 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
@@ -42,12 +42,10 @@
    "outputs": [],
    "source": [
     "import pandas\n",
-    "import numpy\n",
     "from functools import reduce\n",
     "import re\n",
     "\n",
     "df = pandas.read_csv('db-a.csv')\n",
-    "df_mirror = df\n",
     "\n",
     "with open('constraints.txt', 'r') as file:\n",
     "    first_line = file.readline().strip()\n",
@@ -210,8 +208,8 @@
     "\n",
     "    substitution = lambda match: f'{match.group(3)} {operators.get(match.group(2), match.group(2))} {match.group(1)}'\n",
     "\n",
-    "    nova_expressao = re.sub(pattern, substitution, expression)\n",
-    "    return nova_expressao"
+    "    new_expression = re.sub(pattern, substitution, expression)\n",
+    "    return new_expression"
    ]
   },
   {
@@ -294,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
