--- a/denial-constraint-violations/v1.0.0/using-pandas-conditions/run-0.2.ipynb
+++ b/denial-constraint-violations/v1.0.0/using-pandas-conditions/run-0.2.ipynb
@@ -2,18 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# accepted constraints pattern:\n",
-    "#   t1.<col_name> <bool operator> t2.<col_name>\n",
-    "#   t1.<col_name> <bool operator> <scalar_value>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -21,9 +10,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (1.5.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2023.3)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (1.21.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from pandas) (2023.3)\n",
       "Requirement already satisfied: six>=1.5 in /home/alessandro/.asdf/installs/python/3.10.5/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 23.2.1 is available.\n",
       "You should consider upgrading via the '/home/alessandro/.asdf/installs/python/3.10.5/bin/python3.10 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
@@ -32,57 +21,27 @@
     }
    ],
    "source": [
+    "# accepted constraints pattern:\n",
+    "#   t1.<col_name> <bool operator> t2.<col_name>\n",
+    "#   t1.<col_name> <bool operator> <scalar_value>\n",
+    "\n",
     "!pip install pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
     "from functools import reduce\n",
-    "import re\n",
-    "\n",
-    "df = pandas.read_csv('db-a.csv')\n",
-    "\n",
-    "with open('constraints.txt', 'r') as file:\n",
-    "    first_line = file.readline().strip()\n",
-    "\n",
-    "constraints = first_line.split(',')"
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['t1.salario > t2.salario', 't1.ano >= 2023']\n",
-      "\n",
-      "   id   ano      departamento  salario   bonus\n",
-      "0   1  2023  Recursos Humanos    50000   10000\n",
-      "1   2  2023            Vendas    60000  350000\n",
-      "2   3  2022        Tecnologia    75000  100000\n",
-      "3   4  2024         Marketing    55000   80000\n",
-      "4   5  2023        Financeiro    70000   90000\n",
-      "5   6  2023         Operações    48000       0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(constraints)\n",
-    "print()\n",
-    "print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,60 +53,23 @@
     "        return True\n",
     "    else:\n",
     "        print(f\"invalid constraint sintax: {constraint}\")\n",
-    "        return False\n",
-    "    \n",
-    "for cs in constraints:\n",
-    "  check_constraint_sintax(cs)"
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[False, True]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def has_scalar_value_compare(constraint):\n",
     "    pattern = r\"t1\\..*\\s+[<>=!]+\\s+t2\\..*\"\n",
-    "    return False if re.match(pattern, constraint) else True\n",
-    "\n",
-    "print([ has_scalar_value_compare(cs) for cs in constraints])"
+    "    return False if re.match(pattern, constraint) else True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['t1.ano >= 2023']\n",
-      "['t1.salario > t2.salario']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# scalar_constraints = [cs for cs in constraints if has_scalar_value_compare(cs)]\n",
-    "\n",
-    "scalar_constraints = list(filter(has_scalar_value_compare, constraints))\n",
-    "relational_constraints = [cs for cs in constraints if cs not in scalar_constraints]\n",
-    "\n",
-    "print(scalar_constraints)\n",
-    "print(relational_constraints)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +123,8 @@
     "        '>': '<',\n",
     "        '<=': '>=',\n",
     "        '>=': '<=',\n",
-    "        '!=': '!='\n",
+    "        '!=': '!=',\n",
+    "        '=': '='\n",
     "    }\n",
     "\n",
     "    pattern = r'(t1\\.\\w+)\\s*([><=]+)\\s*(\\d+)'\n",
@@ -214,53 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['t1.ano >= 2023']\n",
-      "['2023 <= t1.ano']\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "constraints_scalar_left_side = [ invert_expression(sc) for sc in  scalar_constraints]\n",
-    "pandas_scalar_conditions = [ gen_pandas_condition(df, csl, 't1') for csl in constraints_scalar_left_side ]\n",
-    "\n",
-    "print(scalar_constraints)\n",
-    "print(constraints_scalar_left_side)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   id   ano      departamento  salario   bonus\n",
-      "0   1  2023  Recursos Humanos    50000   10000\n",
-      "1   2  2023            Vendas    60000  350000\n",
-      "3   4  2024         Marketing    55000   80000\n",
-      "4   5  2023        Financeiro    70000   90000\n",
-      "5   6  2023         Operações    48000       0\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_filtered_by_scalar_ex = df[reduce(lambda x, y: x & y, pandas_scalar_conditions)]\n",
-    "print(df_filtered_by_scalar_ex)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,48 +159,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_tuple = df.iloc[0]\n",
-    "# resolve_left_side_constraints(df_tuple, constraints)"
+    "########################## EXEC ##########################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pandas.read_csv('db-a.csv')\n",
+    "\n",
+    "with open('constraints.txt', 'r') as file:\n",
+    "    first_line = file.readline().strip()\n",
+    "\n",
+    "constraints = first_line.split(',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['t1.salario > t2.salario', 't1.ano >= 2023']\n",
+      "['t1.salario > t2.salario', 't1.ano < t2.ano']\n",
       "\n",
-      "   id   ano      departamento  salario   bonus  violations       targets\n",
-      "0   1  2023  Recursos Humanos    50000   10000           1           [6]\n",
-      "1   2  2023            Vendas    60000  350000           3     [1, 4, 6]\n",
-      "2   3  2022        Tecnologia    75000  100000           0            []\n",
-      "3   4  2024         Marketing    55000   80000           2        [1, 6]\n",
-      "4   5  2023        Financeiro    70000   90000           4  [1, 2, 4, 6]\n",
-      "5   6  2023         Operações    48000       0           0            []\n"
+      "   id   ano      departamento  salario   bonus\n",
+      "0   1  2023  Recursos Humanos    50000   10000\n",
+      "1   2  2023            Vendas    60000  350000\n",
+      "2   3  2022        Tecnologia    75000  100000\n",
+      "3   4  2024         Marketing    55000   80000\n",
+      "4   5  2023        Financeiro    70000   90000\n",
+      "5   6  2023         Operações    48000       0\n"
      ]
     }
    ],
    "source": [
+    "print(constraints)\n",
+    "print()\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for cs in constraints:\n",
+    "  check_constraint_sintax(cs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scalar_constraints = list(filter(has_scalar_value_compare, constraints))\n",
+    "relational_constraints = [cs for cs in constraints if cs not in scalar_constraints]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "['t1.salario > t2.salario', 't1.ano < t2.ano']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(scalar_constraints)\n",
+    "print(relational_constraints)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_filtered_by_scalar_ex = df\n",
+    "\n",
+    "if len(scalar_constraints):\n",
+    "  constraints_scalar_left_side = [ invert_expression(sc) for sc in  scalar_constraints]\n",
+    "  pandas_scalar_conditions = [ gen_pandas_condition(df, csl, 't1') for csl in constraints_scalar_left_side ]\n",
+    "  df_filtered_by_scalar_ex = df[reduce(lambda x, y: x & y, pandas_scalar_conditions)]\n",
+    "\n",
+    "  print(scalar_constraints)\n",
+    "  print(constraints_scalar_left_side)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id   ano      departamento  salario   bonus\n",
+      "0   1  2023  Recursos Humanos    50000   10000\n",
+      "1   2  2023            Vendas    60000  350000\n",
+      "2   3  2022        Tecnologia    75000  100000\n",
+      "3   4  2024         Marketing    55000   80000\n",
+      "4   5  2023        Financeiro    70000   90000\n",
+      "5   6  2023         Operações    48000       0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_filtered_by_scalar_ex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tuples_qtd = df.shape[0]\n",
     "\n",
     "df['violations'] = 0\n",
-    "df['targets'] = [[] for _ in range(tuples_qtd)]\n",
+    "df['targets'] = [[] for _ in range(tuples_qtd)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['t1.salario > t2.salario', 't1.ano < t2.ano']\n",
+      "\n",
+      "   id   ano      departamento  salario   bonus  violations          targets\n",
+      "0   1  2023  Recursos Humanos    50000   10000           0               []\n",
+      "1   2  2023            Vendas    60000  350000           1              [4]\n",
+      "2   3  2022        Tecnologia    75000  100000           5  [1, 2, 4, 5, 6]\n",
+      "3   4  2024         Marketing    55000   80000           0               []\n",
+      "4   5  2023        Financeiro    70000   90000           1              [4]\n",
+      "5   6  2023         Operações    48000       0           0               []\n"
+     ]
+    }
+   ],
+   "source": [
+    "if bool(len(relational_constraints)):\n",
+    "  for idx, line in df_filtered_by_scalar_ex.iterrows():\n",
+    "    left_resolved_constraints = resolve_left_side_constraints(line, relational_constraints)\n",
+    "    pandas_conditions = [ gen_pandas_condition(df, lcs, 't2') for lcs in left_resolved_constraints ]\n",
+    "    pandas_conditions_set = reduce(lambda x, y: x & y, pandas_conditions)\n",
+    "    violations_ids = df[pandas_conditions_set]['id'].to_list()\n",
+    "    df.at[idx, 'violations'] = len(violations_ids)\n",
+    "    df.at[idx, 'targets'] = violations_ids\n",
     "\n",
-    "for idx, line in df_filtered_by_scalar_ex.iterrows():\n",
-    "  left_resolved_constraints = resolve_left_side_constraints(line, relational_constraints)\n",
-    "  pandas_conditions = [ gen_pandas_condition(df, lcs, 't2') for lcs in left_resolved_constraints ]\n",
-    "  pandas_conditions_set = reduce(lambda x, y: x & y, pandas_conditions)\n",
-    "  violations_ids = df[pandas_conditions_set]['id'].to_list()\n",
-    "  df.at[idx, 'violations'] = len(violations_ids)\n",
-    "  df.at[idx, 'targets'] = violations_ids\n",
+    "else:\n",
+    "  for idx, line in df_filtered_by_scalar_ex.iterrows():\n",
+    "    df.at[idx, 'violations'] = 1\n",
+    "    df.at[idx, 'targets'] = [line['id']]\n",
     "\n",
     "print(constraints, end='\\n\\n')\n",
     "print(df)"
